# freeaiagent

./: .gitignore  MULTI_MODEL_DESIGN.md  PLANS.md  README.md  pyproject.toml
docs/: sdx-engine.md
freeaiagent/: __init__.py  __main__.py  caller.py  catalog.py  cli.py  client.py  config.py  context.py  ensemble.py  hf.py  installed.py  main.py  pull.py  router.py  server.py  service.py  summarize.py  tools.py
freeaiagent/backends/: __init__.py  _sse.py  base.py  groq.py  llama_cpp.py  llamafile.py  ollama.py  openai_compat.py  sdx_backend.py
freeaiagent/endpoints/: chat.py  config.py  context.py  health.py  models.py  openai.py  sessions.py  task.py  tools.py
freeaiagent/sdx/: __init__.py  catalog.py  context_builder.py  downloader.py  engine.py  text_runner.py  types.py  vision_runner.py
freeaiagent/ui/: index.html
tests/: conftest.py  test_sdx_api.py  test_sdx_context_builder.py  test_sdx_engine.py
tests/integration/: test_chat_endpoint.py  test_chat_stream_endpoint.py  test_client_sdk.py  test_context_endpoint.py  test_health_endpoint.py  test_models_config_endpoints.py  test_openai_compat_endpoint.py  test_pull_stream_endpoint.py  test_sessions_endpoint.py  test_task_endpoint.py  test_tools_endpoint.py
tests/smoke/: test_smoke.py
tests/unit/: test_caller.py  test_catalog.py  test_cli_rm.py  test_cli_search_pull.py  test_config.py  test_context.py  test_download_integrity.py  test_ensemble.py  test_hf.py  test_installed.py  test_llama_cpp_backend.py  test_llamafile_backend.py  test_openai_compat_backend.py  test_pull.py  test_router.py  test_server_lock.py  test_service.py  test_sse.py  test_summarize.py  test_tools.py
